--- a/_posts/05-05-2108-begin.md
+++ b/_posts/05-05-2108-begin.md
@@ -2,14 +2,12 @@
 layout: post
 title: "Y asi empeso"
 date: 2018-05-05 01:00:00
-image: '/assets/img/post-image.png'
-description: 'Como empezo'
+image: ''
 tags:
 - intro
 - otroTag
 categories:
 - tag
-twitter_text: 'aun no se como usar esto'
 ---
 # Mi primer sitio con pages
 
