--- a/_posts/2021-03-05-videogame1.md
+++ b/_posts/2021-03-05-videogame1.md
@@ -39,6 +39,7 @@ abarca los siguientes puntos:
 
 A continuación, dejo el programa completo que nos permite correr nuestro juego.
 
+{% include codeHeader.html %}
 ```javascript
 <!DOCTYPE html>
 <html>
