--- a/_posts/2022-09-26-reme.md
+++ b/_posts/2022-09-26-reme.md
@@ -11,5 +11,9 @@ categories:
 - tag
 ---
 
-Está página contiene algunas fichas REME que uso en mi grupo
+Está página contiene algunas fichas REME que uso en mi grupo scout:
+
+* [la paciencia del pueblo sin ley](2021-9-26-lapacienciadelpueblosinley.md)
+
+
  
